--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,45 @@
 version: '3.1'
+
 services:
+
   stats-server:
+    build: ./stats-service
     ports:
       - "9090:9090"
+    depends_on:
+      - stats-db
+    environment:
+      - DATASOURCE_URL=jdbc:postgresql://stats-db:5432/explore_with_me_stat
+      - DB_USER=stats_user
+      - DB_PASSWORD=password
 
   stats-db:
     image: postgres:14-alpine
+    ports:
+      - "6541:5432"
+    environment:
+      - POSTGRES_DB=explore_with_me_stat
+      - POSTGRES_USER=stats_user
+      - POSTGRES_PASSWORD=password
 
   ewm-service:
+    build: ./main-service
     ports:
       - "8080:8080"
+    depends_on:
+      - ewm-db
+      - stats-server
+    environment:
+      - DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/explore_with_me
+      - DB_USER=ewm_user
+      - DB_PASSWORD=password
+      - STATISTIC_SERVER_URL=http://stats-server:9090
 
   ewm-db:
     image: postgres:14-alpine
+    ports:
+      - "6542:5432"
+    environment:
+      - POSTGRES_DB=explore_with_me
+      - POSTGRES_USER=ewm_user
+      - POSTGRES_PASSWORD=password
