--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,19 +1,26 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-logging.level.org.springframework=DEBUG
-
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=postgres
-spring.datasource.password=postgres
 spring.sql.init.mode=always
+spring.jpa.show-sql=true
+#logging.level.org.springframework.orm.jpa=INFO
+#logging.level.org.springframework.transaction=INFO
+#logging.level.org.springframework.transaction.interceptor=TRACE
+#logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 server.port=8080
-#---
-spring.config.activate.on-profile=ci,test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:shareit
-spring.datasource.username=test
-spring.datasource.password=test
+
+# local database
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=pass
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#
+#statistic-server.url=http://localhost:9090
+
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+statistic-server.url=${STATISTIC_SERVER_URL}
