--- a/main-service/src/test/resources/application.properties
+++ b/main-service/src/test/resources/application.properties
@@ -11,7 +11,7 @@ logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
-
+#---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:explore_with_me
@@ -20,4 +20,6 @@ spring.datasource.password=test
 spring.h2.console.enabled=true
 
 server.port=8080
-statistic-server.url=http://localhost:9090
+#statistic-server.url=http://localhost:9090
+statistic-server.url=http://stats-server:9090
+#statistic-server.url=${STATISTIC_SERVER_URL}
